--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">MediWiki</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
-    <string name="title_setting">Setting</string>
+    <string name="title_alarm">Alarm</string>
 
 </resources>
