--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MediWiki</string>
-    <string name="title_home">Home</string>
-    <string name="title_search">Search</string>
-    <string name="title_alarm">Alarm</string>
+    <string name="title_home">홈</string>
+    <string name="title_search">검색</string>
+    <string name="title_alarm">알람</string>
 
 </resources>
